--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
   <g class='nodes'></g>
 </svg>
 <script src='https://d3js.org/d3.v4.min.js'></script>
-<script src='graphs/simple.js'></script>
+<script src='graphs/grid12.js'></script>
 <script src='viz.js'></script>
 <script src='bfs.js'> </script>
 <script>
   searcher.init(graph, 0, 3);
-  searcher.step(graph);
   update(graph);
+
+  d3.interval(() => {
+    searcher.step(graph);
+    update(graph);
+  }, 1500);
 </script>
