--- a/index.html
+++ b/index.html
@@ -3,27 +3,52 @@
 <style>
   .nodes circle {
     pointer-events: all;
-    stroke: none;
-    stroke-width: 40px;
+    stroke-width: 2px;
   }
 </style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <svg width='960' height='600'>
   <g class='links'></g>
   <g class='nodes'></g>
 </svg>
+<button type='button' class='btn btn-primary' onclick='doStep()'>Step</button>
+<button type='button' class='btn btn-secondary' onclick='finish()'>Auto-Finish</button>
 <script src='https://d3js.org/d3.v4.min.js'></script>
+<!-- <script src='graphs/line.js'></script> -->
 <script src='graphs/grid12.js'></script>
+<!-- <script src='graphs/simple.js'></script> -->
+<!-- <script src='graphs/powerpoint.js'></script> -->
 <script src='viz.js'></script>
-<script src='bfs.js'> </script>
+<script src='bfs.js'></script>
 <script>
+  // Line
+  // searcher.init(graph, 0, 9);
+
+  // Graph12
+  // searcher.init(graph, 0, 11);
   searcher.init(graph, 0, 10);
+  // searcher.init(graph, 0)
+
+  // Simple
+  // searcher.init(graph, 0, 3);
+
+  // PowerPoint
+  // searcher.init(graph, 0, 7);
+  // searcher.init(graph, 0, 3);
   update(graph);
 
-  var interval = d3.interval(() => {
-    if(searcher.step(graph)) {
-      console.log('Search complete.');
-      interval.stop();
-    }
+  function doStep() {
+    searcher.step(graph);
     update(graph);
-  }, 1500);
+  }
+
+  function finish() {
+    var interval = d3.interval(() => {
+      if(searcher.step(graph)) {
+        console.log('Search complete.');
+        interval.stop();
+      }
+      update(graph);
+    },  500);
+  }
 </script>
