Implements freeze() and unfreeze()

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <button type='button' class='btn btn-secondary' onclick='finish()'>Auto-Finish</button>
 <script src='https://d3js.org/d3.v4.min.js'></script>
 <!-- <script src='graphs/line.js'></script> -->
-<script src='graphs/grid12.js'></script>
+<!-- <script src='graphs/grid12.js'></script> -->
 <!-- <script src='graphs/simple.js'></script> -->
-<!-- <script src='graphs/powerpoint.js'></script> -->
+<script src='graphs/powerpoint.js'></script>
 <script src='viz.js'></script>
 <script src='bfs.js'></script>
 <script>
@@ -26,14 +26,14 @@
 
   // Graph12
   // searcher.init(graph, 0, 11);
-  searcher.init(graph, 0, 10);
+  // searcher.init(graph, 0, 10);
   // searcher.init(graph, 0)
 
   // Simple
   // searcher.init(graph, 0, 3);
 
   // PowerPoint
-  // searcher.init(graph, 0, 7);
+  searcher.init(graph, 0, 7);
   // searcher.init(graph, 0, 3);
   update(graph);
 
