--- a/index.html
+++ b/index.html
@@ -6,36 +6,80 @@
     stroke-width: 2px;
   }
 </style>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<svg width='960' height='600'>
+<link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO' crossorigin='anonymous'>
+<h1 class='text-center' id='title'></h1>
+<svg width='960' height='600' style='margin: auto; display: block;'>
   <g class='links'></g>
   <g class='nodes'></g>
 </svg>
-<button type='button' class='btn btn-primary' onclick='doStep()'>Step</button>
-<button type='button' class='btn btn-secondary' onclick='finish()'>Auto-Finish</button>
+<br />
+<div class='container'>
+  <div class='row'>
+    <div class='col-sm' align='center'>
+      <button type='button' class='btn btn-primary' onclick='changeSearcher(bfs);'>Breadth First Search</button>
+    </div>
+    <div class='col-sm' align='center'>
+      <button type='button' class='btn btn-primary' onclick='changeSearcher(aStar);'>A* Search</button>
+    </div>
+  </div>
+  <br />
+  <div class='row'>
+    <div class='col-sm'>
+      <button type='button' class='float-right btn btn-primary' onclick='doStep()'>Step</button>
+    </div>
+    <div class='col-sm'>
+      <button type='button' class='btn btn-secondary' onclick='finish()'>Auto-Finish</button>
+    </div>
+  </div>
+</div>
+
 <script src='https://d3js.org/d3.v4.min.js'></script>
+<script src="https://unpkg.com/tinyqueue@2.0.0/tinyqueue.min.js"></script>
 <!-- <script src='graphs/line.js'></script> -->
 <!-- <script src='graphs/grid12.js'></script> -->
 <!-- <script src='graphs/simple.js'></script> -->
-<script src='graphs/powerpoint.js'></script>
+<!-- <script src='graphs/powerpoint.js'></script> -->
+<script src='graphs/map.js'></script>
 <script src='viz.js'></script>
 <script src='bfs.js'></script>
+<script src='aStar.js'></script>
 <script>
+  let source; let target;
+  function setSearch(s, t) { source=s; target=t; }
   // Line
-  // searcher.init(graph, 0, 9);
+  // setSearch(0, 9);
 
   // Graph12
-  // searcher.init(graph, 0, 11);
-  // searcher.init(graph, 0, 10);
-  // searcher.init(graph, 0)
+  // setSearch(0, 11);
+  // setSearch(0, 10);
+  // setSearch(0)
 
   // Simple
-  // searcher.init(graph, 0, 3);
+  // setSearch(0, 3);
 
   // PowerPoint
-  searcher.init(graph, 0, 7);
-  // searcher.init(graph, 0, 3);
-  update(graph);
+  // setSearch(0, 7);
+  // setSearch(0, 3);
+
+  // Map
+  setSearch(2, 12);
+  
+  function changeSearcher(generator) {
+    if(generator === aStar) {
+      document.getElementById('title').innerText = 'A* Search'
+      freeze();
+    }
+    else {
+      document.getElementById('title').innerText = 'Breadth First Search';
+      unfreeze();
+    }
+    resetGraph();
+    searcher = generator();
+    searcher.init(graph, source, target);
+    update(graph);
+  }
+  let searcher;
+  changeSearcher(bfs);
 
   function doStep() {
     searcher.step(graph);
