--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </div>
   </div>
   <div class = 'row'>
-      <p class='text-center' id='visited'></p>
+      <p class='text-center' id='visited' style= 'color:lightskyblue'></p>
   </div>
   <div class = 'row'>
-      <p class ='text-center' id = 'frontier'></p>
+      <p class ='text-center' id = 'frontier' style= 'color:mediumslateblue'></p>
   </div>
 </div>
 
